Moved buildplate preview generation to buildplate launcher requested via event bus